--- a/css/layout.css
+++ b/css/layout.css
@@ -1006,7 +1006,7 @@ fieldset[disabled] .btn-theme {
 }
 
 .bg-color-sky-light {
-  background: #fafafa !important;
+  background: #F8F8F8 !important;
 }
 
 /*------------------------------------------------------------------
